# points

./: .gitignore  CMakeLists.txt
include/: functions.h  game.h  inputPanel.h  main.h  mainWindow.h  newGameWindow.h  player.h
src/: functions.cpp  game.cpp  inputPanel.cpp  main.cpp  mainWindow.cpp  newGameWindow.cpp  player.cpp
